# proyecto-poo

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: caja.hpp  datanivel.hpp  entidad.hpp  escena.hpp  inputnombre.hpp  juego.hpp  jugador.hpp  mapa.hpp  menu.hpp  niveles.hpp  opciones.hpp  partida.hpp  scoreboard.hpp  scoremanager.hpp  victoria.hpp
src/: caja.cpp  inputnombre.cpp  juego.cpp  jugador.cpp  main.cpp  mapa.cpp  menu.cpp  niveles.cpp  opciones.cpp  partida.cpp  scoreboard.cpp  scoremanager.cpp  victoria.cpp
